--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -39,10 +39,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-test
     outputs:
-      release_ready: ${{ steps.release.outputs.release_created }}
+      release_ready: ${{ steps.release.outputs['packages/code-assist--release_created'] }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v4   
+        uses: actions/checkout@v4
 
       - id: release
         name: Release Please
