--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,14 +1,22 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "release-type": "node",
+  "plugins": [
+    {
+      "type": "node-workspace",
+      "updatePeerDependencies": true
+    },
+    "sentence-case"
+  ],
   "include-component-in-tag": false,
   "include-v-in-tag": true,
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
   "packages": {
-    ".": {
+    "packages/code-assist": {
       "package-name": "@googlemaps/code-assist-mcp",
-      "changelog-path": "CHANGELOG.md"
+      "release-type": "node",
+      "changelog-path": "packages/code-assist/CHANGELOG.md"
     }
   }
 }
