--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,6 +52,6 @@ jobs:
 
       - name: Publish
         # npm publish will trigger the build via the prepack hook
-        run: npm publish --workspaces
+        run: npm publish --workspace=packages/code-assist
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_WOMBOT_TOKEN }}
