chore: pin the initial version number

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -16,7 +16,8 @@
     "packages/code-assist": {
       "package-name": "@googlemaps/code-assist-mcp",
       "release-type": "node",
-      "changelog-path": "packages/code-assist/CHANGELOG.md"
+      "changelog-path": "packages/code-assist/CHANGELOG.md",
+      "release-as": "0.1.0"
     }
   }
 }
