--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,6 +1,8 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "release-type": "node",
+  "release-as": "0.1.0",
+  "changelog-path": "CHANGELOG.md",
   "plugins": [
     {
       "type": "node-workspace",
