--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "google-maps-platform-ai",
   "version": "0.1.0",
+  "private": true,
   "workspaces": ["packages/code-assist"],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/googlemaps/platform-ai.git"
+    "url": "https://github.com/googlemaps/platform-ai.git"
   },
   "publishConfig": {
     "registry": "https://wombat-dressing-room.appspot.com"
