fix(release): add prepack script to build before publishing (#8)
* fix(release): add prepack script to build before publishing

* add build:prepare step for prepackage command that does everything except the local zipfile

--- a/packages/code-assist/package.json
+++ b/packages/code-assist/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@googlemaps/code-assist-mcp",
   "version": "0.1.0",
-  "main": "code-assist/index.js",
+  "main": "dist/index.js",
   "type": "module",
   "bin": {
     "google-maps-platform-code-assist": "dist/index.js"
@@ -14,7 +14,9 @@
     "compile": "tsc index.ts && shx chmod +x dist/*.js",
     "start": "node dist/index.js",
     "build": "bun clean && bun build index.ts --outdir dist --target=node",
-    "build:dist": "bun clean && bun build index.ts --outdir dist --target=node --format=cjs --minify && echo '{\"type\": \"commonjs\"}' > dist/package.json && cp README.md CHANGELOG.md dist && zip -r dist_$(date +%Y%m%d).zip dist",
+    "build:prepare": "bun clean && bun build index.ts --outdir dist --target=node --format=cjs --minify && echo '{\"type\": \"commonjs\"}' > dist/package.json && cp README.md CHANGELOG.md dist",
+    "build:dist": "npm run build:prepare && zip -r dist_$(date +%Y%m%d).zip dist",
+    "prepack": "npm run build:prepare",
     "test": "bun test tests/unit.test.ts",
     "test:integration": "bun test tests/integration.test.ts"
   },
