--- a/packages/code-assist/package.json
+++ b/packages/code-assist/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.1",
   "main": "dist/index.js",
   "type": "module",
-  "bin": {
-    "google-maps-platform-code-assist": "dist/index.js"
-  },
+  "bin": "dist/index.js",
   "files": [
     "dist"
   ],
