--- a/packages/code-assist/package.json
+++ b/packages/code-assist/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@googlemaps/code-assist-mcp",
   "version": "0.1.1",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "type": "module",
-  "bin": "dist/index.js",
+  "bin": {
+    "google-maps-platform-code-assist": "./dist/index.js"
+  },
   "files": [
     "dist"
   ],
