--- a/packages/code-assist/package.json
+++ b/packages/code-assist/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@googlemaps/code-assist-mcp",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "google-maps-platform-code-assist": "dist/index.js"
+    "code-assist-mcp": "dist/index.js"
   },
   "files": [
     "dist"
@@ -14,7 +14,7 @@
     "compile": "tsc index.ts && shx chmod +x dist/*.js",
     "start": "node dist/index.js",
     "build": "bun clean && bun build index.ts --outdir dist --target=node",
-    "build:prepare": "bun clean && bun build index.ts --outdir dist --target=node --format=cjs --minify && echo '{\"type\": \"commonjs\"}' > dist/package.json && cp README.md dist",
+    "build:prepare": "bun clean && bun build index.ts --outdir dist --target=node --format=cjs --minify && { echo '#!/usr/bin/env node'; cat dist/index.js; } > dist/index.js.tmp && mv dist/index.js.tmp dist/index.js && echo '{\"type\": \"commonjs\"}' > dist/package.json && cp README.md dist",
     "build:dist": "npm run build:prepare && zip -r dist_$(date +%Y%m%d).zip dist",
     "prepack": "npm run build:prepare",
     "test": "bun test tests/unit.test.ts",
