--- a/packages/code-assist/package.json
+++ b/packages/code-assist/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^22.15.18",
     "axios": "1.9.0",
     "google-auth-library": "^9.15.1",
+    "commander": "^12.0.0",
     "shx": "^0.4.0",
     "typescript": "^5.8.3"
   },
