--- a/packages/code-assist/package.json
+++ b/packages/code-assist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@googlemaps/code-assist-mcp",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
@@ -24,6 +24,11 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/googlemaps/platform-ai.git",
+    "directory": "packages/code-assist"
+  },
   "dependencies": {
     "@google-cloud/vertexai": "^1.10.0",
     "@modelcontextprotocol/sdk": "^1.11.3",
