--- a/packages/code-assist/package.json
+++ b/packages/code-assist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@googlemaps/code-assist-mcp",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
@@ -14,7 +14,7 @@
     "compile": "tsc index.ts && shx chmod +x dist/*.js",
     "start": "node dist/index.js",
     "build": "bun clean && bun build index.ts --outdir dist --target=node",
-    "build:prepare": "bun clean && bun build index.ts --outdir dist --target=node --format=cjs --minify && { echo '#!/usr/bin/env node'; cat dist/index.js; } > dist/index.js.tmp && mv dist/index.js.tmp dist/index.js && echo '{\"type\": \"commonjs\"}' > dist/package.json && cp README.md dist",
+    "build:prepare": "bun clean && bun build index.ts --outdir dist --target=node --format=cjs --minify && { echo '#!/usr/bin/env node'; cat dist/index.js; } > dist/index.js.tmp && mv dist/index.js.tmp dist/index.js && shx chmod +x dist/index.js && echo '{\"type\": \"commonjs\"}' > dist/package.json && cp README.md dist",
     "build:dist": "npm run build:prepare && zip -r dist_$(date +%Y%m%d).zip dist",
     "prepack": "npm run build:prepare",
     "test": "bun test tests/unit.test.ts",
@@ -23,12 +23,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Google Maps Platform Code Assist MCP (Model Context Protocol) service",
   "dependencies": {
     "@google-cloud/vertexai": "^1.10.0",
     "@modelcontextprotocol/sdk": "^1.11.3",
     "@types/node": "^22.15.18",
     "axios": "1.9.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "google-auth-library": "^9.15.1",
     "shx": "^0.4.0",
     "typescript": "^5.8.3"
